<resources>
    <string name="app_name">NewWether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>



    <string name="add_new">Add New</string>
    <string name="news_topic">News Topic</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="dash">--</string>
    <string name="four_dash">----</string>
    <string name="wind_and_cloud_cover">Wind and Cloud Cover</string>
    <string name="temperature_and_humidity">Temperature And Humidity</string>
    <string name="air_quality">Air Quality</string>
    <string name="this_will_be_place_image">This will be place image</string>
    <string name="new_place">New Place</string>
    <string name="last_seen">Last Seen</string>
    <string name="topic_or_place_image">Topic Or Place Image</string>
    <string name="news_content_image">News content image</string>

    <string name="enter_place">Enter Place</string>
    <string name="add">Add</string>
    <string name="email_cant_be_empty">Email can\'t be empty</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="minimum_length_should_be_6">minimum password length should be 6</string>
    <string name="please_wait">Please wait</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="users">Users</string>
    <string name="loading">Loading...</string>

</resources>